--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- first element -->
     <div class="header">
       <div class="logo-and-links">
-        <h1>Header Logo</h1>
+        <h1 class="header-logo">Header Logo</h1>
         <ul>
           <li><a href="###">header link one</a></li>
           <li><a href="###">header link two</a></li>
@@ -33,12 +33,59 @@
       </div>
     </div>
     <!-- secong element -->
-    <div class="information"></div>
+    <div class="information">
+      <h1 class="information-text">Some Random Information.</h1>
+      <div class="cards">
+        <div class="card">
+          <div class="image-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card">
+          <div class="image-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="image-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- third element -->
-    <div class="quote"></div>
+    <div class="quote">
+      <p class="quote-text">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that looks nice.
+      </p>
+      <p class="quote-author">-Thor, God of Thunder</p>
+    </div>
     <!-- fourht element -->
-    <div class="CTA"></div>
+    <div class="CTA">
+      <div class="CTA-content">
+        <div class="cta-left-side">
+          <h1 class="cta-header">Call to action! It's time!</h1>
+          <p class="cta-text">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button class="button-cta">Sign up</button>
+      </div>
+    </div>
     <!-- fifth element -->
-    <div class="footer"></div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
   </body>
 </html>
